--- a/src/index.css
+++ b/src/index.css
@@ -81,3 +81,38 @@ li.font-bold {
     padding: 10px 10px;
     margin-bottom: 15px;
 }
+
+/* TableWithHeader.css */
+.table-container {
+    width: 100%;
+}
+
+.custom-table {
+    width: 96%;
+    border-collapse: collapse;
+    border: 1px solid #ccc;
+    margin: 20px 2%;
+}
+
+.header-cell {
+    background-color: #fff;
+    color: #000;
+    padding: 10px;
+}
+
+.data-cell {
+    border: 1px solid #ccc;
+    padding: 10px;
+}
+
+.preview-sticker {
+    position: sticky;
+    top: 0;
+    left: 0;
+    background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+    padding: 10px;
+}
+
+.space-out {
+    height: 309px;
+}
