--- a/src/index.css
+++ b/src/index.css
@@ -91,13 +91,15 @@ li.font-bold {
     width: 96%;
     border-collapse: collapse;
     border: 1px solid #ccc;
-    margin: 20px 2%;
+    margin: 50px 2% 0 2%;
 }
 
 .header-cell {
-    background-color: #fff;
+    /*background-color: #fff;*/
     color: #000;
     padding: 10px;
+    text-align: left;
+    font-size: 20px;
 }
 
 .data-cell {
@@ -114,5 +116,58 @@ li.font-bold {
 }
 
 .space-out {
-    height: 309px;
+    height: 306px;
+    background-color: #38AE29;
+}
+
+.pdf-image {
+    width: 100%;
+    height: 100%;
+}
+
+.banner-image {
+    height: 100%;
+    width: 100%;
+}
+
+.page-head {
+    background-color: #3bf123;
+    width: 100%;
+    height: 140px;
+    padding: 0 10px;
+    margin-bottom: 5px;
+}
+
+.pdf-logo-wrapper {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.pdf-logo {
+    width: 150px;
+    height: 100px;
+}
+
+.pdf-banner-text {
+    color: #1b3953;
+    font-weight: 700;
+}
+
+.page-head-spacer {
+    background-color: #3bf123;
+    height: 5px;
+    width: 100%;
+    margin-bottom: 5px;
+}
+
+.sub-page-head {
+    background-color: #1b3953;
+    height: 100px;
+    margin-bottom: 30px;
+    padding: 10px 30px;
+}
+
+.sub-page-head .sub-page-text {
+    color: #fff;
+    font-size: 16px;
 }
