--- a/src/index.css
+++ b/src/index.css
@@ -131,9 +131,9 @@ li.font-bold {
 }
 
 .page-head {
-    background-color: #3bf123;
+    background-color: #288068;
     width: 100%;
-    height: 140px;
+    height: 95px;
     padding: 0 10px;
     margin-bottom: 5px;
 }
@@ -144,30 +144,112 @@ li.font-bold {
 }
 
 .pdf-logo {
-    width: 150px;
-    height: 100px;
+    width: 100px;
+    height: 70px;
 }
 
 .pdf-banner-text {
-    color: #1b3953;
+    color: #004603;
     font-weight: 700;
+    margin-top: -5px;
 }
 
 .page-head-spacer {
-    background-color: #3bf123;
+    background-color: #288068;
     height: 5px;
     width: 100%;
     margin-bottom: 5px;
 }
 
 .sub-page-head {
-    background-color: #1b3953;
-    height: 100px;
-    margin-bottom: 30px;
+    background-color: #A4A09F;
+    height: 80px;
+    margin-bottom: 10px;
     padding: 10px 30px;
 }
 
 .sub-page-head .sub-page-text {
     color: #fff;
     font-size: 16px;
+}
+
+.cover-bottom-content {
+    background-color: #288068;
+}
+
+.cover-bottom-header {
+    background-color: #38ae29;
+}
+
+.resources-table {
+    width: 100%;
+    margin-top: 15px;
+}
+
+.resources-table td:first-child,
+.resources-table th {
+    background-color: #329f81;
+    color: #fff;
+}
+
+.resources-table,
+.resources-table th,
+.resources-table td {
+    border: 1px solid;
+}
+
+.resources-table td,
+.cost-table td {
+    font-size: 13px;
+    padding: 5px;
+    text-align: center;
+}
+
+.resources-table td:nth-child(2),
+.cost-table td:nth-child(2) {
+    font-size: 13px;
+    padding: 5px;
+    text-align: left;
+}
+
+.resources-table th,
+.cost-table th{
+    font-size: 13px;
+}
+
+.cost-table {
+    width: 100%;
+    margin-top: 15px;
+}
+
+
+.cost-table,
+.cost-table th,
+.cost-table td {
+    border: 1px solid;
+}
+
+.cost-table th {
+    background-color: #288068;
+    color: #fff;
+    font-size: 12px;
+}
+
+.cost-table td {
+    background-color: #EBEBEB;
+}
+
+.cost-table td:nth-child(1),
+.cost-table td:nth-child(2) {
+    background-color: #DCDDDF;
+    color: #000;
+}
+
+.cost-table td:last-child {
+    font-weight: 700;
+}
+
+.page-content {
+    padding-left: 30px;
+    padding-right: 30px;
 }
