--- a/src/index.css
+++ b/src/index.css
@@ -433,6 +433,7 @@ li.font-bold {
     border-top: 1px solid #000;
     border-right: 1px solid #000;
     padding: 5px;
+    font-size: 14px;
 }
 
 .pdf_bottom th:first-child {
