--- a/src/index.css
+++ b/src/index.css
@@ -478,3 +478,14 @@ li.font-bold {
     border-top: none;
     border-bottom: none;
 }
+
+.equipment_table td,
+.equipment_table th{
+    border: 1px solid #000;
+    padding: 5px;
+    font-size: 13px;
+}
+
+.equipment_table th {
+    background-color: #D8D8D8;
+}
