--- a/src/index.css
+++ b/src/index.css
@@ -507,3 +507,8 @@ li.font-bold {
 .image-card img {
     object-fit: cover;
 }
+
+.invoice_table td {
+    border: 1px solid #000;
+    padding: 5px;
+}
