--- a/src/index.css
+++ b/src/index.css
@@ -320,7 +320,7 @@ li.font-bold {
 }
 
 .section-table td {
-    font-size: 14px;
+    font-size: 12px;
 }
 
 .section-table td:first-child {
@@ -338,18 +338,22 @@ li.font-bold {
 .asset-details-table th {
     background-color: #D8D8D8;
     padding-bottom: 10px;
-    font-size: 14px;
+    font-size: 12px;
 }
 
 .asset-details-table td {
     padding-left: 5px;
-    font-size: 14px;
+    font-size: 12px;
     padding-bottom: 10px;
 }
 
 .asset-details-table th,
 .asset-details-table td {
     border: 1px solid #000;
+}
+
+.asset-details-table td {
+    border-top: 0;
 }
 
 .dimension-table-cover {
@@ -376,7 +380,8 @@ li.font-bold {
 }
 
 .dimension-table-cover td {
-    font-size: 14px;
+    font-size: 12px;
+    padding-bottom: 8px;
 }
 
 .dimension-one {
@@ -401,6 +406,8 @@ li.font-bold {
 .visual-text {
     border: 1px solid #000;
     padding-left: 8px;
+    font-size: 14px;
+    padding-bottom: 8px;
 }
 
 .report_type_data table {
@@ -411,6 +418,8 @@ li.font-bold {
 .report_type_data td {
     border: 1px solid #000;
     border-bottom: none;
+    font-size: 12px;
+    padding-bottom: 8px;
 }
 
 .report_type_data table:last-child td {
@@ -419,6 +428,10 @@ li.font-bold {
 
 .report_type_data th {
     background-color: #D8D8D8;
+}
+
+.report_type_data td {
+    padding-left: 8px;
 }
 
 .pdf_bottom table {
@@ -433,7 +446,15 @@ li.font-bold {
     border-top: 1px solid #000;
     border-right: 1px solid #000;
     padding: 5px;
-    font-size: 14px;
+    font-size: 12px;
+}
+
+.pdf_bottom td {
+    font-size: 12px;
+}
+
+.pdf_bottom td:last-child {
+    padding-bottom: 12px;
 }
 
 .pdf_bottom th:first-child {
@@ -491,7 +512,8 @@ li.font-bold {
 }
 
 .image-card {
-    border: 1px solid #000;
+    border-bottom: 1px solid #000;
+    border-right: 1px solid #000;
     padding: 10px;
     display: flex;
     justify-content: center;
@@ -499,9 +521,19 @@ li.font-bold {
     flex-direction: column;
 }
 
+.image-card:first-child,
+.image-card:nth-child(2) {
+    border-top: 1px solid #000;
+}
+
+.image-card:first-child,
+.image-card:nth-child(odd){
+    border-left: 1px solid #000;
+}
+
 .image-card .image-wrapper {
-    width: 250px;
-    height: 250px;
+    width: 200px;
+    height: 200px;
 }
 
 .image-card img {
