--- a/src/index.css
+++ b/src/index.css
@@ -568,10 +568,18 @@ li.font-bold {
     padding: 10px 10px 20px;
 }
 
+.drawing-image-one img {
+    max-height: 280px;
+}
+
 .drawing-image-two {
     border-left: 1px solid #000;
     border-bottom: 1px solid #000;
     padding: 10px 10px 20px;
+}
+
+.drawing-image-two img {
+    max-height: 190px;
 }
 
 .drawing-note {
