--- a/src/index.css
+++ b/src/index.css
@@ -568,11 +568,13 @@ li.font-bold {
     border-left: 1px solid #000;
     border-bottom: 1px solid #000;
     padding: 10px 10px 20px;
+    display: flex;
+    justify-content: center;
 }
 
-.drawing-image-two img {
-    max-height: 190px;
-}
+/*.drawing-image-two img {*/
+/*    max-height: 190px;*/
+/*}*/
 
 .drawing-note {
     border-left: 1px solid #000;
