--- a/src/index.css
+++ b/src/index.css
@@ -565,7 +565,7 @@ li.font-bold {
 }
 
 .drawing-image-two {
-    border-left: 1px solid #000;
+    /*border-left: 1px solid #000;*/
     border-bottom: 1px solid #000;
     padding: 10px 10px 20px;
     display: flex;
@@ -576,8 +576,11 @@ li.font-bold {
 /*    max-height: 190px;*/
 /*}*/
 
-.drawing-note {
-    border-left: 1px solid #000;
+/*.drawing-note {*/
+/*    border-left: 1px solid #000;*/
+/*}*/
+.drawing-image-one {
+    border-right: 1px solid #000;
 }
 
 .drawing-image-one .drawing-image-two,
